[project]
name = "timeoff"
description = "Track vacation hours accrued."
readme = "README.md"
version = "0.0.4"
license = { text = "MIT" }
requires-python = ">=3.8"
authors = [
  { name="Tiffany Huang", email="hello@tifa.io" },
]
keywords = [
  "time off",
  "vacation",
  "pto",
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
]
dependencies = [
  "sphinx-rtd-theme==1.2.0",
  "sphinx-prompt==1.5.0",
  "tabulate==0.9.0",
]

[project.scripts]
timeoff = "timeoff.commands:main"

[project.urls]
Homepage = "https://github.com/tifa/timeoff"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py38"
line-length = 120
select = [
  "F",    # Pyflakes
  "E",    # pycodestyle
  "I",    # isort
  "N",    # pep8-naming
#  "D",    # pydocstyle
  "YTT",  # flake8-2020
  "B",    # flake8-bugbear
  "A",    # flake8-builtins
  "COM",  # flake8-commas
  "C4",   # flake8-comprehensions
#  "DTZ",  # flake8-datetimez
  "EM",   # flake8-errmsg
  "EXE",  # flake8-executable
  "FA",   # flake8-future-annotations
  "ISC",  # flake8-implicit-str-concat
  "ICN",  # flake8-import-conventions
  "G",    # flake8-logging-format
  "INP",  # flake8-no-pep420
  "PIE",  # flake8-pie
  "T20",  # flake8-print
  "PT",   # flake8-pytest-style
  "Q",    # flake8-quotes
  "RSE",  # flake8-raise
  "RET",  # flake8-return
  "SLF",  # flake8-self
  "SIM",  # flake8-simplify
  "TID",  # flake8-tidy-imports
  "TCH",  # flake8-type-checking
  "INT",  # flake8-gettext
  "ARG",  # flake8-unused-arguments
  "PTH",  # flake8-use-pathlib
  "TD",   # flake8-todos
  "PGH",  # pygrep-hooks
  "PL",   # Pylint
  "TRY",  # tryceratops
  "FLY",  # flynt
  "NPY",  # NumPy-specific rules
  "RUF",  # Ruff-specific rules
]

[tool.ruff.per-file-ignores]
"src/timeoff/commands.py" = ["T201"]
"src/timeoff/prompts.py" = ["T201"]
"src/timeoff/schedules.py" = ["T201"]
